--- a/.github/workflows/infra-deploy-dev.yml
+++ b/.github/workflows/infra-deploy-dev.yml
@@ -10,6 +10,7 @@ permissions:
 env:
   ENV_NAME: dev
   LOCATION: belgiumcentral
+  MONITORING_LOCATION: westeurope
   RG_NAME: opal-dev-rg
 
 jobs:
@@ -34,7 +35,6 @@ jobs:
 
       - name: Deploy Bicep
         run: |
-          # Inject Postgres password at runtime
           jq '.parameters.postgresAdminPassword.value = "${{ secrets.POSTGRES_ADMIN_PASSWORD }}"' \
             infra/main.parameters.json > infra/_params.json
 
@@ -42,7 +42,7 @@ jobs:
             --resource-group "${RG_NAME}" \
             --template-file infra/main.bicep \
             --parameters @infra/_params.json \
-            --parameters envName="${ENV_NAME}" location="${LOCATION}" namePrefix="opal" \
+            --parameters envName="${ENV_NAME}" location="${LOCATION}" monitoringLocation="${MONITORING_LOCATION}" namePrefix="opal" \
             --query "properties.outputs" \
             -o json | tee infra_outputs.json
 
