Fix Dockerfile copy paths for repo-root build context

--- a/src/aml_sd_stub/Dockerfile
+++ b/src/aml_sd_stub/Dockerfile
@@ -1,13 +1,19 @@
 FROM python:3.11-slim
 
-WORKDIR /var/azureml-app
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+WORKDIR /app
 
-COPY score.py .
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential curl \
+    && rm -rf /var/lib/apt/lists/*
 
-ENV AZUREML_MODEL_DIR=/var/azureml-app
-EXPOSE 5001
+COPY src/aml_sd_stub/requirements.txt /app/requirements.txt
+COPY src/aml_sd_stub/score.py /app/score.py
 
-CMD ["python", "-m", "gunicorn", "-b", "0.0.0.0:5001", "score:app"]
+RUN pip install --no-cache-dir -U pip \
+    && pip install --no-cache-dir -r /app/requirements.txt
+
+EXPOSE 8080
+CMD ["python", "/app/score.py"]
