Fix service Dockerfiles for repo-root builds; remove missing requirements.txt deps

--- a/src/aml_sd_stub/Dockerfile
+++ b/src/aml_sd_stub/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential curl \
     && rm -rf /var/lib/apt/lists/*
 
+# Build context is repo root
 COPY src/aml_sd_stub/requirements.txt /app/requirements.txt
 COPY src/aml_sd_stub/score.py /app/score.py
 
@@ -16,4 +17,6 @@ RUN pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir -r /app/requirements.txt
 
 EXPOSE 8080
+
+# Keep it simple: run the scoring server (your score.py should bind to 0.0.0.0:8080)
 CMD ["python", "/app/score.py"]
