--- a/src/web_api/pyproject.toml
+++ b/src/web_api/pyproject.toml
@@ -1,20 +1,22 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "opal-web-api"
 version = "0.1.0"
+description = "OPAL Web API service (FastAPI) for uploads, jobs, and health checks."
+readme = "README.md"
 requires-python = ">=3.11"
+license = { text = "Proprietary" }
+
 dependencies = [
-  "fastapi>=0.111",
-  "uvicorn[standard]>=0.30",
-  "sqlalchemy>=2.0",
-  "psycopg[binary]>=3.1",
-  "azure-identity>=1.17",
-  "azure-storage-blob>=12.20",
-  "azure-servicebus>=7.12",
-  "pydantic>=2.7",
-  "pydantic-settings>=2.2",
-  "structlog>=24.1",
-  "opal-shared @ file:///app/shared"
+  "fastapi>=0.110.0",
+  "uvicorn[standard]>=0.27.0",
+  "sqlalchemy>=2.0.0",
+  "psycopg2-binary>=2.9.9",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
+include = ["web_api*"]
