--- a/src/billing_service/requirements.txt
+++ b/src/billing_service/requirements.txt
@@ -3,9 +3,11 @@ uvicorn[standard]==0.30.6
 
 pydantic==2.9.2
 pydantic-settings==2.5.2
+
 SQLAlchemy==2.0.36
 psycopg[binary]==3.2.2
 
+azure-identity==1.16.1
 azure-storage-blob==12.22.0
 azure-servicebus==7.12.2
 
